syntax = "proto3";
package auth;

service AuthService {
  rpc Signup (SignupRequest) returns (SignupResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message SignupRequest {
  string email = 1;
  string password = 2;
  bool requires2_fa = 3;
}
message SignupResponse {
  string message = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}
message LoginResponse {
  string message = 1;
  string token = 2;
}
